<resources>
  <string name="app_name">SoftSpace</string>
  <string name="sign_in">Sign in</string>
  <string name="create_account">Create account</string>
  <string name="reset_password">Reset password</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="display_name">Display name</string>
  <string name="profile">Profile</string>
  <string name="bio">Bio</string>
  <string name="avatar_url">Avatar URL</string>
  <string name="save">Save</string>
  <string name="sign_out">Sign out</string>
  <string name="required_fields">Email and password are required.</string>
  <string name="add_photo_label">Add photo</string>
  <string name="upload_profile_picture">Upload Profile Picture</string>
  <string name="profile_picture">Profile picture</string>
  <string name="create_post_title">Create Post</string>
  <string name="comments_title">Comments</string>
  <string name="author_profile_picture">Author profile picture</string>
  <string name="post_picture">Post picture</string>
  <string name="feed">Feed</string>
  <string name="settings_label">Settings</string>
  <string name="calendar_label">Calendar</string>
  <string name="messages_label">Messages</string>
  <string name="search_label">Search</string>
  <string name="forgot_password">Forgot Password\n</string>
  <string name="post_details">Post details</string>
  <string name="event_details">Event details</string>
  <string name="conversation">Conversation</string>
  <string name="post_id_format">Post #%1$d</string>
  <string name="event_id_format">Event #%1$d</string>
  <string name="message_id_format">Conversation for message #%1$d</string>
  <string name="details_data_note">Details will be loaded by this screen’s repository and view model.</string>
  <string name="posts_by_format">Posts by %1$s</string>
  <string name="profile_load_failed">Unable to load profile.</string>
  <string name="submit">Submit</string>
</resources>
