<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_nav_graph"
  app:startDestination="@id/feedFragment">

  <action
    android:id="@+id/return_to_login"
    app:destination="@id/login_activity"/>

  <action
    android:id="@+id/open_settings"
    app:destination="@+id/settings_fragment"
    app:launchSingleTop="true"/>
  <fragment
    android:id="@+id/feedFragment"
    android:name="edu.cnm.deepdive.softspace.ui.feed.FeedFragment"
    android:label="@string/feed"
    tools:layout="@layout/fragment_feed">
  </fragment>

  <fragment
    android:id="@+id/messagesFragment"
    android:name="edu.cnm.deepdive.softspace.ui.feed.MessagesFragment"
    android:label="@string/messages_label"
    tools:layout="@layout/fragment_messages">
    <action
      android:id="@+id/action_messagesFragment_to_conversationFragment"
      app:destination="@id/conversationFragment">
      <argument
        android:name="messageId"
        app:argType="long"
        android:defaultValue="0L"/>
    </action>
  </fragment>

  <fragment
    android:id="@+id/calendarFragment"
    android:name="edu.cnm.deepdive.softspace.ui.feed.CalendarFragment"
    android:label="@string/calendar_label"
    tools:layout="@layout/fragment_calendar">
    <action
      android:id="@+id/action_calendarFragment_to_eventDetailFragment"
      app:destination="@id/eventDetailFragment"/>
  </fragment>

  <fragment
    android:id="@+id/profileFragment"
    android:name="edu.cnm.deepdive.softspace.ui.profile.ProfileFragment"
    android:label="@string/profile"
    tools:layout="@layout/fragment_profile">
    <argument
      android:name="userId"
      app:argType="string"/>
  </fragment>

  <fragment
    android:id="@+id/profilePageFragment"
    android:name="edu.cnm.deepdive.softspace.ui.profile.ProfilePage"
    android:label="@string/profile"
    tools:layout="@layout/profile_page">
    <argument
      android:name="userId"
      app:argType="string"
      android:defaultValue=""/>
    <action
      android:id="@+id/edit_profile"
      app:destination="@id/profileFragment">
    <argument
      android:name="userId"
      app:argType="string"/>

    </action>
  </fragment>

  <fragment
    android:id="@+id/postDetailFragment"
    android:name="edu.cnm.deepdive.softspace.ui.post.PostDetailFragment"
    android:label="@string/post_details"
    tools:layout="@layout/fragment_post_detail">
    <argument
      android:name="postId"
      app:argType="long"/>
  </fragment>

  <fragment
    android:id="@+id/eventDetailFragment"
    android:name="edu.cnm.deepdive.softspace.ui.event.EventDetailFragment"
    android:label="@string/event_details"
    tools:layout="@layout/fragment_event_detail">
    <argument
      android:name="eventId"
      app:argType="long"/>
  </fragment>

  <fragment
    android:id="@+id/conversationFragment"
    android:name="edu.cnm.deepdive.softspace.ui.message.ConversationFragment"
    android:label="@string/conversation"
    tools:layout="@layout/fragment_conversation">
    <argument
      android:name="messageId"
      app:argType="long"
      android:defaultValue="0L"/>
  </fragment>

  <fragment
    android:id="@+id/settings_fragment"
    android:name="edu.cnm.deepdive.softspace.ui.feed.SettingsFragment"
    android:label="Settings"/>

  <activity
    android:id="@+id/login_activity"
    android:name="edu.cnm.deepdive.softspace.ui.LoginActivity"/>

  <fragment
    android:id="@+id/feedFragment"
    android:name="edu.cnm.deepdive.softspace.ui.feed.FeedFragment"
    android:label="Feed"
    tools:layout="@layout/fragment_feed">

    <action
      android:id="@+id/action_feedFragment_to_postDetailFragment"
      app:destination="@id/postDetailFragment" />

  </fragment>

</navigation>
