<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/login_nav_graph"
  app:startDestination="@id/signInFragment">

  <fragment
    android:id="@+id/signInFragment"
    android:name="edu.cnm.deepdive.softspace.ui.auth.SignInFragment"
    android:label="@string/sign_in"
    tools:layout="@layout/fragment_sign_in">
    <action
      android:id="@+id/action_signInFragment_to_mainActivity"
      app:destination="@id/mainActivity"/>
  </fragment>

  <fragment
    android:id="@+id/profileFragment"
    android:name="edu.cnm.deepdive.softspace.ui.profile.ProfileFragment"
    android:label="@string/profile"
    tools:layout="@layout/fragment_profile">
    <action
      android:id="@+id/action_profileFragment_to_signInFragment"
      app:destination="@id/signInFragment"/>
    <!--<action
      android:id="@+id/action_profileFragment_to_profilePageFragment"
      app:destination="@id/profilePageFragment"/>-->
  </fragment>

  <activity
    android:id="@+id/mainActivity"
    android:name="edu.cnm.deepdive.softspace.ui.MainActivity"
    android:label="@string/app_name"
    tools:layout="@layout/activity_main"/>
</navigation>
